--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.11"
 flet = "*"
 sqlmodel = "^0.0.18"
 reg-d-bot = {git = "https://github.com/Deeplearn-PeD/reg"}
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
