--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ reggui = "reggui.main:run"
 [tool.poetry.dependencies]
 python = "^3.11"
 flet = "^0.22.1"
-sqlmodel = "^0.0.18"
+sqlmodel = "^0.0.21"
 reg-d-bot = {git = "https://github.com/Deeplearn-PeD/reg"}
 python-dotenv = "^1.0.1"
 tenacity = "<=8.3.0"
@@ -21,6 +21,7 @@ hypercorn = "^0.17.3"
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
 scikit-learn = "^1.5.1"
+playwright = "^1.45.1"
 
 [build-system]
 requires = ["poetry-core"]
