--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ readme = "README.md"
 reggui = "reggui.main:run"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-flet = "^0.22.1"
-sqlmodel = "^0.0.21"
+python = "^3.12"
+flet = ">=0.25.1"
+sqlmodel = ">=0.0.22"
 reg-d-bot = {git = "https://github.com/Deeplearn-PeD/reg"}
 python-dotenv = "^1.0.1"
 tenacity = "<=8.3.0"
@@ -21,7 +21,6 @@ hypercorn = "^0.17.3"
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
 scikit-learn = "^1.5.1"
-playwright = "^1.45.1"
 
 [build-system]
 requires = ["poetry-core"]
